--- a/HYNewNest/Features(主代码)/GloryComponent/Controller/BYGloryVC.xib
+++ b/HYNewNest/Features(主代码)/GloryComponent/Controller/BYGloryVC.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -20,9 +19,9 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0xs-5g-Mbv">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" delaysContentTouches="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0xs-5g-Mbv">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="z4A-dr-BUw"/>
                         <outlet property="delegate" destination="-1" id="bRj-Xu-gP4"/>
@@ -30,7 +29,7 @@
                 </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" red="0.058823529409999999" green="0.058823529409999999" blue="0.1137254902" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="0xs-5g-Mbv" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="192-C9-hkt"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="0xs-5g-Mbv" secondAttribute="bottom" id="Dux-H9-DhN"/>
@@ -40,9 +39,4 @@
             <point key="canvasLocation" x="137.68115942028987" y="146.65178571428569"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
