--- a/HYNewNest/Features(主代码)/GloryComponent/View/BYGloryHeaderTableViewCell.xib
+++ b/HYNewNest/Features(主代码)/GloryComponent/View/BYGloryHeaderTableViewCell.xib
@@ -5,54 +5,62 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BYGloryHeaderCell" rowHeight="397" id="KGk-i7-Jjw" customClass="BYGloryHeaderTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="507"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BYGloryHeaderCell" id="KGk-i7-Jjw" customClass="BYGloryHeaderTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="366" height="416"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="507"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="366" height="416"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ypI-H0-gW2">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="211"/>
-                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ypI-H0-gW2">
+                        <rect key="frame" x="0.0" y="0.0" width="366" height="206"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="ypI-H0-gW2" secondAttribute="height" multiplier="16:9" id="DJm-9z-dbw"/>
                         </constraints>
                     </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b5U-nK-1Pr" customClass="JXCategoryTitleImageView">
-                        <rect key="frame" x="20" y="211" width="335" height="80"/>
+                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="T1U-Ip-5R4" customClass="JXCategoryTitleImageView">
+                        <rect key="frame" x="20" y="206" width="326" height="80"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="80" id="xrD-6I-Q0g"/>
+                            <constraint firstAttribute="height" constant="80" id="2uq-ZB-ONU"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eh1-Mz-cI9">
+                        <rect key="frame" x="20" y="296" width="326" height="110"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="eh1-Mz-cI9" secondAttribute="height" multiplier="163:55" id="XT8-EZ-eeA"/>
                         </constraints>
                     </view>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="ypI-H0-gW2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="9tc-aL-jLT"/>
-                    <constraint firstAttribute="trailing" secondItem="b5U-nK-1Pr" secondAttribute="trailing" constant="20" id="CUP-cZ-iwK"/>
-                    <constraint firstItem="b5U-nK-1Pr" firstAttribute="top" secondItem="ypI-H0-gW2" secondAttribute="bottom" id="PBG-Ks-3m4"/>
-                    <constraint firstItem="b5U-nK-1Pr" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Ye1-kM-hsi"/>
+                    <constraint firstAttribute="bottom" secondItem="eh1-Mz-cI9" secondAttribute="bottom" constant="10" id="Eho-wQ-NgV"/>
+                    <constraint firstAttribute="trailing" secondItem="eh1-Mz-cI9" secondAttribute="trailing" constant="20" id="Ksh-wn-4Av"/>
+                    <constraint firstAttribute="trailing" secondItem="T1U-Ip-5R4" secondAttribute="trailing" constant="20" id="Lpe-de-0Ww"/>
+                    <constraint firstItem="T1U-Ip-5R4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="VBV-cH-C63"/>
                     <constraint firstItem="ypI-H0-gW2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="ctS-5P-wJ7"/>
+                    <constraint firstItem="eh1-Mz-cI9" firstAttribute="top" secondItem="T1U-Ip-5R4" secondAttribute="bottom" constant="10" id="e4K-T1-Tqs"/>
+                    <constraint firstItem="eh1-Mz-cI9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="mJK-x7-tEj"/>
+                    <constraint firstItem="T1U-Ip-5R4" firstAttribute="top" secondItem="ypI-H0-gW2" secondAttribute="bottom" id="nU9-xd-KMh"/>
                     <constraint firstAttribute="trailing" secondItem="ypI-H0-gW2" secondAttribute="trailing" id="nw3-Iq-19B"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
-                <outlet property="gloryTabView" destination="b5U-nK-1Pr" id="06S-3q-dYD"/>
+                <outlet property="gloryTabView" destination="T1U-Ip-5R4" id="frF-wv-wDa"/>
+                <outlet property="listBackgroundView" destination="eh1-Mz-cI9" id="aVE-8Q-rXn"/>
                 <outlet property="videoBackground" destination="ypI-H0-gW2" id="KaQ-TS-iF0"/>
             </connections>
-            <point key="canvasLocation" x="323.91304347826087" y="271.54017857142856"/>
+            <point key="canvasLocation" x="815.94202898550736" y="399.44196428571428"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemIndigoColor">
-            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
