--- a/HYNewNest/Features(主代码)/GloryComponent/View/BYGloryHeaderContentItem.xib
+++ b/HYNewNest/Features(主代码)/GloryComponent/View/BYGloryHeaderContentItem.xib
@@ -4,45 +4,53 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BYGloryHeaderContentView">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BYGloryHeaderContentItem">
             <connections>
                 <outlet property="contentLabel" destination="psb-hF-t7g" id="LzJ-o5-hkt"/>
                 <outlet property="imageView" destination="9dB-Th-uRp" id="uuy-G5-GRy"/>
+                <outlet property="jumpHtmlButton" destination="Yri-0P-rqe" id="iGN-mL-87q"/>
                 <outlet property="titleLabel" destination="Dcw-OL-CmS" id="0p3-GS-dNZ"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="399" height="147"/>
+            <rect key="frame" x="0.0" y="0.0" width="388" height="110"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9dB-Th-uRp">
-                    <rect key="frame" x="0.0" y="0.0" width="399" height="147"/>
-                    <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9dB-Th-uRp">
+                    <rect key="frame" x="0.0" y="0.0" width="388" height="110"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="星级身分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dcw-OL-CmS">
                     <rect key="frame" x="10" y="10" width="56" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="jbw-3a-qYQ"/>
+                    </constraints>
                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="14"/>
                     <color key="textColor" red="0.22352941176470587" green="0.79607843137254897" blue="0.88627450980392153" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="psb-hF-t7g">
-                    <rect key="frame" x="10" y="35" width="379" height="70"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="psb-hF-t7g">
+                    <rect key="frame" x="10" y="30" width="368" height="46"/>
+                    <string key="text">content
+content</string>
                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="12"/>
                     <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yri-0P-rqe">
-                    <rect key="frame" x="10" y="113" width="68" height="24"/>
+                    <rect key="frame" x="10" y="76" width="55" height="24"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="68" id="WOw-VW-sKH"/>
+                        <constraint firstAttribute="width" constant="55" id="WOw-VW-sKH"/>
                         <constraint firstAttribute="height" constant="24" id="g8M-sg-sne"/>
                     </constraints>
                     <state key="normal" backgroundImage="button_clicked"/>
+                    <connections>
+                        <action selector="jumpHmltClicked:" destination="-1" eventType="touchUpInside" id="DM2-ns-Qc1"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -54,10 +62,10 @@
                 <constraint firstItem="9dB-Th-uRp" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="GJK-5y-G75"/>
                 <constraint firstItem="Dcw-OL-CmS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="LuR-GA-g7Q"/>
                 <constraint firstItem="Yri-0P-rqe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="MGq-OB-GEf"/>
-                <constraint firstItem="psb-hF-t7g" firstAttribute="top" secondItem="Dcw-OL-CmS" secondAttribute="bottom" constant="5" id="W2G-gU-IkY"/>
+                <constraint firstItem="psb-hF-t7g" firstAttribute="top" secondItem="Dcw-OL-CmS" secondAttribute="bottom" id="W2G-gU-IkY"/>
                 <constraint firstAttribute="trailing" secondItem="9dB-Th-uRp" secondAttribute="trailing" id="amM-SF-oAh"/>
                 <constraint firstAttribute="bottom" secondItem="Yri-0P-rqe" secondAttribute="bottom" constant="10" id="apz-NB-Bmu"/>
-                <constraint firstItem="Yri-0P-rqe" firstAttribute="top" secondItem="psb-hF-t7g" secondAttribute="bottom" constant="8" symbolic="YES" id="f3s-Sg-Hnn"/>
+                <constraint firstItem="Yri-0P-rqe" firstAttribute="top" secondItem="psb-hF-t7g" secondAttribute="bottom" id="f3s-Sg-Hnn"/>
                 <constraint firstItem="9dB-Th-uRp" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="j4c-Gj-8Cd"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -66,8 +74,5 @@
     </objects>
     <resources>
         <image name="button_clicked" width="78" height="34"/>
-        <systemColor name="systemIndigoColor">
-            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
