--- a/HYNewNest/Features(主代码)/GloryComponent/View/BYGloryHeaderTableViewCell.xib
+++ b/HYNewNest/Features(主代码)/GloryComponent/View/BYGloryHeaderTableViewCell.xib
@@ -11,38 +11,38 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BYGloryHeaderCell" id="KGk-i7-Jjw" customClass="BYGloryHeaderTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="366" height="416"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="411"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="366" height="416"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="375" height="411"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ypI-H0-gW2">
-                        <rect key="frame" x="0.0" y="0.0" width="366" height="206"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ypI-H0-gW2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="211"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="ypI-H0-gW2" secondAttribute="height" multiplier="16:9" id="DJm-9z-dbw"/>
                         </constraints>
                     </view>
-                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="T1U-Ip-5R4" customClass="JXCategoryTitleImageView">
-                        <rect key="frame" x="20" y="206" width="326" height="80"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T1U-Ip-5R4" customClass="JXCategoryTitleImageView">
+                        <rect key="frame" x="20" y="211" width="335" height="70"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="80" id="2uq-ZB-ONU"/>
+                            <constraint firstAttribute="height" constant="70" id="2uq-ZB-ONU"/>
                         </constraints>
                     </view>
-                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eh1-Mz-cI9">
-                        <rect key="frame" x="20" y="296" width="326" height="110"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eh1-Mz-cI9">
+                        <rect key="frame" x="20" y="291" width="335" height="110"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="eh1-Mz-cI9" secondAttribute="height" multiplier="163:55" id="XT8-EZ-eeA"/>
+                            <constraint firstAttribute="height" constant="110" id="Jyn-r7-e8d"/>
                         </constraints>
                     </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="ypI-H0-gW2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="9tc-aL-jLT"/>
-                    <constraint firstAttribute="bottom" secondItem="eh1-Mz-cI9" secondAttribute="bottom" constant="10" id="Eho-wQ-NgV"/>
+                    <constraint firstItem="ypI-H0-gW2" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="IiI-MK-joc"/>
                     <constraint firstAttribute="trailing" secondItem="eh1-Mz-cI9" secondAttribute="trailing" constant="20" id="Ksh-wn-4Av"/>
                     <constraint firstAttribute="trailing" secondItem="T1U-Ip-5R4" secondAttribute="trailing" constant="20" id="Lpe-de-0Ww"/>
                     <constraint firstItem="T1U-Ip-5R4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="VBV-cH-C63"/>
@@ -51,6 +51,7 @@
                     <constraint firstItem="eh1-Mz-cI9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="mJK-x7-tEj"/>
                     <constraint firstItem="T1U-Ip-5R4" firstAttribute="top" secondItem="ypI-H0-gW2" secondAttribute="bottom" id="nU9-xd-KMh"/>
                     <constraint firstAttribute="trailing" secondItem="ypI-H0-gW2" secondAttribute="trailing" id="nw3-Iq-19B"/>
+                    <constraint firstAttribute="bottom" secondItem="eh1-Mz-cI9" secondAttribute="bottom" constant="10" id="uIh-jZ-bSA"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
@@ -60,7 +61,7 @@
                 <outlet property="listBackgroundView" destination="eh1-Mz-cI9" id="aVE-8Q-rXn"/>
                 <outlet property="videoBackground" destination="ypI-H0-gW2" id="KaQ-TS-iF0"/>
             </connections>
-            <point key="canvasLocation" x="815.94202898550736" y="399.44196428571428"/>
+            <point key="canvasLocation" x="426.81159420289856" y="280.24553571428572"/>
         </tableViewCell>
     </objects>
 </document>
