--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/HYRechargeCNYEditView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/HYRechargeCNYEditView.xib
@@ -24,6 +24,7 @@
                 <outlet property="depositIdBtnsContainH" destination="eUq-JN-okh" id="5T5-UF-YrA"/>
                 <outlet property="depositorTfView" destination="Zc7-TC-fEF" id="Hxw-XK-WfP"/>
                 <outlet property="lblPayWayName" destination="RwZ-pY-ihD" id="WTN-ri-oqv"/>
+                <outlet property="tipLbl" destination="uJI-mQ-Zht" id="xAk-Du-Cvj"/>
                 <outlet property="warningLabel" destination="ZoM-2s-QMT" id="95A-42-5jk"/>
             </connections>
         </placeholder>
@@ -68,35 +69,35 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OxX-xe-jFh">
-                    <rect key="frame" x="14" y="92.5" width="386" height="96"/>
+                    <rect key="frame" x="14" y="110.5" width="386" height="96"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="96" id="1M8-GW-EST"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Cf-84-UbO" customClass="CNNormalInputView">
-                    <rect key="frame" x="14" y="188.5" width="386" height="80"/>
+                    <rect key="frame" x="14" y="206.5" width="386" height="80"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="80" id="nTV-3R-6xk"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zc7-TC-fEF" customClass="CNNormalInputView">
-                    <rect key="frame" x="14" y="268.5" width="386" height="80"/>
+                    <rect key="frame" x="14" y="286.5" width="386" height="80"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="80" id="9cz-h1-VZH"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NQW-EM-t1q">
-                    <rect key="frame" x="14" y="357.5" width="386" height="96"/>
+                    <rect key="frame" x="14" y="375.5" width="386" height="96"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="96" id="eUq-JN-okh"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SCp-Gt-sFU">
-                    <rect key="frame" x="14" y="453.5" width="386" height="80"/>
+                    <rect key="frame" x="14" y="471.5" width="386" height="80"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sTD-NO-duF">
                             <rect key="frame" x="0.0" y="41" width="386" height="39"/>
@@ -155,7 +156,16 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZoM-2s-QMT">
-                    <rect key="frame" x="14" y="353.5" width="0.0" height="0.0"/>
+                    <rect key="frame" x="14" y="371.5" width="0.0" height="0.0"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="这里是提示文字" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uJI-mQ-Zht">
+                    <rect key="frame" x="15" y="75.5" width="363" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="fdA-qN-wRf"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -171,6 +181,7 @@
                 <constraint firstItem="NQW-EM-t1q" firstAttribute="trailing" secondItem="Zc7-TC-fEF" secondAttribute="trailing" id="AyK-W6-RC9"/>
                 <constraint firstItem="ZoM-2s-QMT" firstAttribute="top" secondItem="Zc7-TC-fEF" secondAttribute="bottom" constant="5" id="EaS-3U-3Sh"/>
                 <constraint firstItem="AdS-ha-nqn" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="EgN-DA-lXL"/>
+                <constraint firstItem="uJI-mQ-Zht" firstAttribute="trailing" secondItem="Egc-ZA-96q" secondAttribute="trailing" id="GI3-PS-FG0"/>
                 <constraint firstItem="9sI-aL-Ark" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="LBq-tP-Ryu"/>
                 <constraint firstItem="2Cf-84-UbO" firstAttribute="leading" secondItem="Zc7-TC-fEF" secondAttribute="leading" id="NNZ-Yl-8lV"/>
                 <constraint firstItem="2Cf-84-UbO" firstAttribute="trailing" secondItem="Zc7-TC-fEF" secondAttribute="trailing" id="NV0-3a-G5W"/>
@@ -181,6 +192,7 @@
                 <constraint firstItem="2Cf-84-UbO" firstAttribute="leading" secondItem="OxX-xe-jFh" secondAttribute="leading" id="ZXV-r6-82p"/>
                 <constraint firstItem="Egc-ZA-96q" firstAttribute="centerY" secondItem="RwZ-pY-ihD" secondAttribute="centerY" id="ahq-93-2Rc"/>
                 <constraint firstItem="SCp-Gt-sFU" firstAttribute="top" secondItem="NQW-EM-t1q" secondAttribute="bottom" id="bAv-Ur-MRV"/>
+                <constraint firstItem="uJI-mQ-Zht" firstAttribute="top" secondItem="AdS-ha-nqn" secondAttribute="bottom" constant="5" id="cuj-Zm-Whi"/>
                 <constraint firstItem="ke3-PS-Vi3" firstAttribute="leading" secondItem="Egc-ZA-96q" secondAttribute="trailing" constant="15" id="dYQ-bU-AVu"/>
                 <constraint firstAttribute="trailing" secondItem="ke3-PS-Vi3" secondAttribute="trailing" constant="16" id="dkb-tE-APk"/>
                 <constraint firstItem="Zc7-TC-fEF" firstAttribute="top" secondItem="2Cf-84-UbO" secondAttribute="bottom" id="elA-IO-ezJ"/>
@@ -189,8 +201,9 @@
                 <constraint firstItem="SCp-Gt-sFU" firstAttribute="leading" secondItem="NQW-EM-t1q" secondAttribute="leading" id="kV8-mu-PnD"/>
                 <constraint firstItem="2Cf-84-UbO" firstAttribute="trailing" secondItem="OxX-xe-jFh" secondAttribute="trailing" id="s52-OQ-OaX"/>
                 <constraint firstItem="AdS-ha-nqn" firstAttribute="trailing" secondItem="9sI-aL-Ark" secondAttribute="trailing" id="uWg-fq-Y7E"/>
-                <constraint firstItem="OxX-xe-jFh" firstAttribute="top" secondItem="AdS-ha-nqn" secondAttribute="bottom" constant="22" id="w5S-uh-gWV"/>
+                <constraint firstItem="OxX-xe-jFh" firstAttribute="top" secondItem="AdS-ha-nqn" secondAttribute="bottom" constant="40" id="w5S-uh-gWV"/>
                 <constraint firstItem="ke3-PS-Vi3" firstAttribute="centerY" secondItem="Egc-ZA-96q" secondAttribute="centerY" id="w5b-2D-6D8"/>
+                <constraint firstItem="uJI-mQ-Zht" firstAttribute="leading" secondItem="RwZ-pY-ihD" secondAttribute="leading" id="wqZ-n5-VFe"/>
                 <constraint firstItem="NQW-EM-t1q" firstAttribute="top" secondItem="Zc7-TC-fEF" secondAttribute="bottom" constant="9" id="xqa-bo-kqM"/>
                 <constraint firstItem="OxX-xe-jFh" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="14" id="yoo-1e-XeQ"/>
             </constraints>
